ghost-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ghost-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-service
            port:
              number: 80
